# notebooklm-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PORTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  configuration.md  library.md  operations.md  production-checklist.md  release.md  security.md
examples/: basic.rs
src/: auth.rs  client.rs  error.rs  lib.rs  rpc.rs  types.rs
tests/fixtures/: data_table.json  notebooks_list.json  share_status.json
